<resources>

    <string name="app_name">W2017_myLabApp</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="Login">Login</string>
    <string name="LoginHint">login name</string>
    <string name="Password">Password</string>
    <string name="PasswordHint">only you know</string>
    <string name="loginButton">Login</string>
    <string name="nowhereButton">This leads to nowhere</string>

    <string name="RadioButton">Radio Button</string>
    <string name="CheckBox">Check Box</string>
    <string name="Switch">Enable Something</string>
    <string name="ImageButton">Star</string>

    <string name="dialog_message">Would you like to finish the activity?</string>
    <string name="dialog_title">TITLE</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string name="startChatButton">Start Chat</string>
    <string name="chatWindowSendButton">SEND</string>
    <string name="chatHint">enter text here</string>

    <string name="outgoing">outgoing</string>
    <string name="incoming">incoming</string>

    <string name="weatherButton">Weather</string>

    <string name="deleteMsgButton">Delete This Message</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>

    <string name="One">Sharp Sheep</string>
    <string name="Two">Krazy Kiwi</string>
    <string name="Three">Pretty Parrot</string>
    <string name="toolbarButtonName">Toolbar</string>
    <string name="about">About</string>
    <string name="pinkEnvelope">Hot Pink Envelope</string>
    <string name="option1">You\'ve selected the SHARP SHEEP!</string>
    <string name="aboutDetails">Version 1.0, by Emma Jilesen</string>
    <string name="dialogBoxTitle">Do you want to go back?</string>
    <string name="positiveButton">YES, GET ME OUT!</string>
    <string name="negativeButton">NO</string>
    <string name="stayingHere">You\'ll be staying right here.</string>
    <string name="dialog_box_hint">Your message here</string>
    <string name="positiveButton2">Set Message</string>
    <string name="negativeButton2">Cancel</string>

</resources>
