<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.emma_jil.w2017_mylabapp.ListItemsActivity"
    android:columnCount="2"
    android:rowCount="2">

    <RadioButton
        android:text="@string/RadioButton"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"/>

    <CheckBox
        android:text="@string/CheckBox"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:id="@+id/checkBox1"/>

    <Switch
        android:text="@string/Switch"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:id="@+id/switchButton"/>

    <ImageButton
        android:background="@android:drawable/btn_star_big_on"
        android:text="@string/ImageButton"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:contentDescription="@string/ImageButton"
        android:id="@+id/imageButton1" />

</GridLayout>
