<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/hello_world"
    tools:context="com.example.emma_jil.w2017_mylabapp.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:id="@+id/textView"
        android:textColor="#FFFFFF"
        android:textSize="14pt"/>

    <Button
        android:text="@string/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:backgroundTint="#900C3F"
        android:textColor="#FFFFFF"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startChatButton"
        android:id="@+id/startChatButton"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:backgroundTint="#FF00FF00" />

    <Button
        android:text="@string/weatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startChatButton"
        android:layout_alignParentStart="true"
        android:id="@+id/weatherForecastButton" />

</RelativeLayout>
