<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.emma_jil.w2017_mylabapp.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:weightSum="1">


    <TextView
        android:text="@string/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LoginLabel"
        android:textAlignment="textStart"
        android:textColor="#0000ff"
        android:textSize="10pt"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/LoginHint"
        android:inputType="textEmailAddress"
        android:background="@drawable/input_text_border"
        android:id="@+id/LoginName"/>

    <TextView
        android:text="@string/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8pt"
        android:id="@+id/passwordLabel"
        android:textAlignment="textStart"
        android:textColor="#0000ff"
        android:textSize="10pt"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@drawable/input_text_border"
        android:id="@+id/LoginPassword"/>

    <Button
        android:text="@string/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:id="@+id/loginButton"
        android:background="#0000ff"
        android:textColor="#ffffff"
        android:textSize="12pt"
        />

</LinearLayout>
